feat(ever-admin): added carriers table for Delivery Settings, in Setup Merchants page EV-1194

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/delivery-takeaway/delivery-takeaway.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/delivery-takeaway/delivery-takeaway.component.html
@@ -48,9 +48,9 @@
 		</div>
 
 		<div class="row">
-			<ea-carriers-smart-table
+			<ea-merchants-setup-shared-carriers
 				*ngIf="currentView == componentViews.carriersTable"
-			></ea-carriers-smart-table>
+			></ea-merchants-setup-shared-carriers>
 		</div>
 	</nb-card-body>
 </nb-card>
