--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -107,6 +107,9 @@
 									Back
 								</button>
 								<button
+									[disabled]="
+										!deliveryAndTakeaway.haveCarriersForAdd
+									"
 									nbButton
 									(click)="deliveryAndTakeaway.add()"
 								>
