feat(ever-admin): improved shared carriers table EV-1194

--- a/admin/website-angular/src/app/@shared/carrier/carriers-table/carriers-table.component.html
+++ b/admin/website-angular/src/app/@shared/carrier/carriers-table/carriers-table.component.html
@@ -2,5 +2,7 @@
 	[settings]="settingsSmartTable"
 	[source]="sourceSmartTable"
 	(userRowSelect)="selectCarrierTmp($event)"
+	(edit)="editRow.emit($event)"
+	(delete)="deleteRow.emit($event)"
 >
 </ng2-smart-table>
