--- a/admin/website-angular/src/app/@shared/render-component/carriers-table/carrier-image/carrier-image.component.html
+++ b/admin/website-angular/src/app/@shared/render-component/carriers-table/carrier-image/carrier-image.component.html
@@ -1,1 +1,6 @@
-<img class="redirect-image" (click)="redirect()" src="{{ imageUrl }}" width="60">
+<img
+	class="{{ redirectPage ? 'redirect-image' : '' }}"
+	(click)="redirect()"
+	src="{{ imageUrl }}"
+	width="60"
+/>
