--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/delivery-takeaway/delivery-takeaway.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/delivery-takeaway/delivery-takeaway.component.html
@@ -56,7 +56,11 @@
 				>
 					<ea-carriers-smart-table
 						[perPage]="carriersPerPage"
+						[selectMode]="null"
+						[redirectPage]="''"
+						[actions]="'show'"
 						[loadWholeData]="restrictedCarriers"
+						(deleteRow)="removeCarrier($event)"
 						#carriersTable
 					></ea-carriers-smart-table>
 				</div>
