feat(ever-admin): finished Delivery & Takeaway Settings step, in Setup Merchants EV-1194

--- a/admin/website-angular/src/app/@shared/carrier/forms/basic-info/basic-info-form.component.html
+++ b/admin/website-angular/src/app/@shared/carrier/forms/basic-info/basic-info-form.component.html
@@ -1,4 +1,4 @@
-<nb-card class="basic-info">
+<nb-card class="basic-info {{ boxShadow === 'none' ? 'no-box-shadow' : '' }}">
 	<div class="col-sm-12" [formGroup]="form" *ngIf="form">
 		<br />
 
