--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -80,6 +80,7 @@
 						</nb-step>
 						<nb-step label="Delivery & Takeaway Settings">
 							<ea-merchants-setup-delivery-takeaway
+								[locationForm]="location.locationForm"
 								#deliveryAndTakeaway
 							></ea-merchants-setup-delivery-takeaway>
 
