--- a/admin/website-angular/src/app/pages/+setup/setup.component.html
+++ b/admin/website-angular/src/app/pages/+setup/setup.component.html
@@ -11,7 +11,7 @@
 			class="btn btn-primary"
 			(click)="navigateToSetupMerchantsPage()"
 		>
-			Setup Merchants
+			{{ 'FAKE_DATA.SETUP_MERCHANTS.SETUP_MERCHANTS' | translate }}
 		</button>
 	</nb-card-body>
 </nb-card>
