--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/delivery-takeaway/delivery-takeaway.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/settings/delivery-takeaway/delivery-takeaway.component.html
@@ -90,7 +90,7 @@
 		<div class="row">
 			<ea-merchants-setup-add-new-carrier
 				#newCarrier
-				[carrier]="carrierData"
+				[carrierId]="carrierId"
 				*ngIf="
 					currentView == componentViews.addNewCarrier ||
 					currentView == componentViews.editCarrier
