--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/contact-info/contact-info.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/contact-info/contact-info.component.html
@@ -1,16 +1,26 @@
 <nb-card class="setup-merchant-contact-info">
-	<nb-card-header>Contact info</nb-card-header>
+	<nb-card-header>
+		{{ 'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.CONTACT_INFO' | translate }}
+	</nb-card-header>
 	<nb-card-body>
 		<form class="row m-0" #contactInfoForm="ngForm">
 			<div class="form-group offset-md-2 col-md-8">
-				<label for="contactPhone">Contact Phone</label>
+				<label for="contactPhone">
+					{{
+						'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.CONTACT_PHONE'
+							| translate
+					}}
+				</label>
 				<input
 					nbInput
 					type="text"
 					class="form-control"
 					id="contactPhone"
 					name="contact-phone-input"
-					placeholder="Contact Phone"
+					placeholder="{{
+						'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.CONTACT_PHONE'
+							| translate
+					}}"
 					[(ngModel)]="contactInfoModel.contactPhone"
 					#contactPhone="ngModel"
 					pattern="^[+]*[(]{0,1}[0-9]{1,4}[)]{0,1}[-\s\./0-9x]*$"
@@ -31,9 +41,12 @@
 						(contactPhone.dirty || contactPhone.touched)
 					"
 				>
-					<span *ngIf="contactPhone.errors.pattern"
-						>Invalid phone number format</span
-					>
+					<span *ngIf="contactPhone.errors.pattern">
+						{{
+							'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.INVALID_PHONE_NUMBER_FORMAT'
+								| translate
+						}}
+					</span>
 				</small>
 			</div>
 
@@ -41,29 +54,45 @@
 				<nb-checkbox
 					[value]="forwardingEmail"
 					(change)="forwardingEmail = !forwardingEmail"
-					>Order Forwarding Email</nb-checkbox
 				>
+					{{
+						'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.ORDER_FORWARDING_EMAIL'
+							| translate
+					}}
+				</nb-checkbox>
 			</div>
 			<div class="form-group  col-md-4">
 				<nb-checkbox
 					[value]="forwardingPhone"
 					(change)="forwardingPhone = !forwardingPhone"
-					>Order Forwarding Phone</nb-checkbox
 				>
+					{{
+						'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.ORDER_FORWARDING_PHONE'
+							| translate
+					}}
+				</nb-checkbox>
 			</div>
 
 			<div
 				*ngIf="forwardingEmail"
 				class="form-group offset-md-2 col-md-8"
 			>
-				<label for="ordersEmail">Orders Email</label>
+				<label for="ordersEmail">
+					{{
+						'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.ORDERS_EMAIL'
+							| translate
+					}}
+				</label>
 				<input
 					nbInput
 					type="email"
 					class="form-control"
 					id="ordersEmail"
 					name="orders-email-input"
-					placeholder="Orders Email"
+					placeholder="{{
+						'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.ORDERS_EMAIL'
+							| translate
+					}}"
 					[(ngModel)]="contactInfoModel.ordersEmail"
 					#ordersEmail="ngModel"
 					required
@@ -90,12 +119,18 @@
 							ordersEmail.value !== '')
 					"
 				>
-					<span *ngIf="ordersEmail.errors.required"
-						>Orders email is required</span
-					>
-					<span *ngIf="ordersEmail.errors.email"
-						>Invalid email format</span
-					>
+					<span *ngIf="ordersEmail.errors.required">
+						{{
+							'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.ORDERS_EMAIL_IS_REQUIRED'
+								| translate
+						}}
+					</span>
+					<span *ngIf="ordersEmail.errors.email">
+						{{
+							'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.INVALID_EMAIL_FORMAT'
+								| translate
+						}}
+					</span>
 				</small>
 			</div>
 
@@ -103,14 +138,22 @@
 				*ngIf="forwardingPhone"
 				class="form-group offset-md-2 col-md-8"
 			>
-				<label for="ordersPhone">Orders Phone</label>
+				<label for="ordersPhone">
+					{{
+						'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.ORDERS_PHONE'
+							| translate
+					}}
+				</label>
 				<input
 					nbInput
 					type="text"
 					class="form-control"
 					id="ordersPhone"
 					name="orders-phone-input"
-					placeholder="Orders Phone"
+					placeholder="{{
+						'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.ORDERS_PHONE'
+							| translate
+					}}"
 					[(ngModel)]="contactInfoModel.ordersPhone"
 					#ordersPhone="ngModel"
 					required
@@ -137,12 +180,18 @@
 							ordersPhone.value !== '')
 					"
 				>
-					<span *ngIf="ordersPhone.errors.required"
-						>Orders phone is required</span
-					>
-					<span *ngIf="ordersPhone.errors.pattern"
-						>Invalid phone number format</span
-					>
+					<span *ngIf="ordersPhone.errors.required">
+						{{
+							'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.ORDERS_PHONE_IS_REQUIRED'
+								| translate
+						}}
+					</span>
+					<span *ngIf="ordersPhone.errors.pattern">
+						{{
+							'FAKE_DATA.SETUP_MERCHANTS.CONTACT_INFO.INVALID_PHONE_NUMBER_FORMAT'
+								| translate
+						}}
+					</span>
 				</small>
 			</div>
 		</form>
