feat(ever-admin): add translate on merchants setup location info EV-1198

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/location/location.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/location/location.component.html
@@ -1,5 +1,7 @@
 <nb-card class="setup-merchant-location">
-	<nb-card-header>Location</nb-card-header>
+	<nb-card-header>
+		{{ 'FAKE_DATA.SETUP_MERCHANTS.LOCATION.LOCATION' | translate }}
+	</nb-card-header>
 	<nb-card-body>
 		<ea-location-form
 			#locationForm
