--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payments.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payments.component.html
@@ -1,10 +1,15 @@
 <nb-card class="setup-merchant-payments">
-	<nb-card-header>Payments</nb-card-header>
+	<nb-card-header>
+		{{ 'FAKE_DATA.SETUP_MERCHANTS.PAYMENTS.PAYMENTS' | translate }}
+	</nb-card-header>
 	<nb-card-body>
 		<div class="row m-0">
 			<div class="form-group offset-md-2 col-md-4">
 				<nb-checkbox [(ngModel)]="isPaymentEnabled">
-					Allow online payments?
+					{{
+						'FAKE_DATA.SETUP_MERCHANTS.PAYMENTS.ALLOW_ONLINE_PAYMENT'
+							| translate
+					}}
 				</nb-checkbox>
 			</div>
 		</div>
