--- a/admin/website-angular/src/app/@shared/product/categories/category-edit/category-edit.component.html
+++ b/admin/website-angular/src/app/@shared/product/categories/category-edit/category-edit.component.html
@@ -1,6 +1,7 @@
 <div class="modal-header">
 	<span class="modal-title">
-		{{ 'CATEGORY_VIEW.EDIT.EDIT_CATEGORY' | translate }} {{ name.value }}
+		{{ 'CATEGORY_VIEW.EDIT.EDIT_CATEGORY' | translate }}
+		{{ basicInfo?.name.value }}
 	</span>
 	<button class="close" aria-label="Close" (click)="cancel()">
 		<span aria-hidden="true">&times;</span>
@@ -8,85 +9,18 @@
 </div>
 
 <div class="modal-body">
-	<form class="form-horizontal" [formGroup]="form">
-		<div class="form-group row">
-			<label class="col-sm-2 control-label">{{
-				'CATEGORY_VIEW.EDIT.CATEGORY_NAME' | translate
-			}}</label>
-			<div class="col-sm-9">
-				<input
-					type="text"
-					class="form-control"
-					placeholder="{{
-						'CATEGORY_VIEW.EDIT.CATEGORY_NAME' | translate
-					}}"
-					formControlName="name"
-					value="name.value"
-				/>
-
-				<div
-					*ngIf="name.invalid && (name.dirty || name.touched)"
-					class="alert alert-danger"
-				>
-					{{
-						'CATEGORY_VIEW.EDIT.ENTER_THE_CATEGORY_NAME' | translate
-					}}
-				</div>
-			</div>
-		</div>
-
-		<div class="form-group row">
-			<label class="col-sm-2 control-label">{{
-				'CATEGORY_VIEW.CREATE.PHOTO' | translate
-			}}</label>
-
-			<div class="col-sm-9">
-				<e-cu-file-uploader
-					[placeholder]="uploaderPlaceholder"
-					[name]="name?.value"
-					[fileUrl]="image?.value"
-					(uploadedImgUrl)="image.setValue($event)"
-				></e-cu-file-uploader>
-
-				<div *ngIf="image.invalid" class="alert alert-danger">
-					{{ 'CATEGORY_VIEW.CREATE.INVALID_URL' | translate }}!
-				</div>
-			</div>
-		</div>
-
-		<div class="form-group row" [hidden]="image.invalid">
-			<label class="col-sm-2 control-label"></label>
-			<div class="col-sm-9">
-				<div class="row preview-img" [hidden]="!showImageMeta">
-					<div>
-						<img
-							#imagePreview
-							src="{{ image.value }}"
-							alt="Invalid image"
-							class="img-rounded"
-						/>
-					</div>
-					<div class="remove-icon text-danger" (click)="deleteImg()">
-						<div
-							class="ion-md-remove-circle"
-							placeholder="Remove image"
-							title="{{
-								'CATEGORY_VIEW.CREATE.REMOVE_IMAGE' | translate
-							}}"
-						></div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</form>
+	<ea-product-category-basic-info-form
+		[category]="currentCategory"
+		#basicInfo
+	></ea-product-category-basic-info-form>
 </div>
 
 <div class="modal-footer">
 	<button
 		class="btn btn-success"
 		type="button"
-		(click)="editCategory()"
-		[disabled]="!isFormModelValid"
+		(click)="editCategory(basicInfo.editObject)"
+		[disabled]="basicInfo.form.invalid"
 	>
 		{{ 'CATEGORY_VIEW.EDIT.DONE' | translate }}!
 	</button>
